plugins {
	id 'org.springframework.boot' version '2.7.4'
	id 'io.spring.dependency-management' version '1.0.14.RELEASE'
	id 'java'
}

group = 'com.dangdiary'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = "8"

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// https://mvnrepository.com/artifact/org.mybatis/mybatis
	implementation 'org.mybatis:mybatis:3.5.9'
	// https://mvnrepository.com/artifact/org.mybatis/mybatis-spring
	implementation 'org.mybatis:mybatis-spring:2.0.7'
	// https://mvnrepository.com/artifact/org.springframework/spring-jdbc
	implementation 'org.springframework:spring-jdbc:5.3.15'
	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
	implementation 'mysql:mysql-connector-java:8.0.30'
	// https://mvnrepository.com/artifact/com.google.code.gson/gson
	implementation 'com.google.code.gson:gson:2.9.0'
	// https://mvnrepository.com/artifact/com.nimbusds/nimbus-jose-jwt
	implementation 'com.nimbusds:nimbus-jose-jwt:3.10'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'com.google.firebase:firebase-admin:9.2.0'


}

tasks.named('test') {
	useJUnitPlatform()
}
